--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-numpy=1.23.5
+numpy==1.23.4
 face_alignment==1.3.5
 imageio==2.19.3
 imageio-ffmpeg==0.4.7
 librosa==0.6.0
+numba==0.48.0
+resampy==0.3.1
 pydub==0.25.1 
 scipy==1.5.3
 kornia==0.6.8
