--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ numpy==1.23.4
 face_alignment==1.3.5
 imageio==2.19.3
 imageio-ffmpeg==0.4.7
-librosa==0.6.0
-numba==0.48.0
+librosa==0.6.0 # 
+numba==0.45.1 # 
 resampy==0.3.1
 pydub==0.25.1 
 scipy==1.5.3
@@ -15,3 +15,4 @@ joblib==1.1.0
 scikit-image==0.19.3
 basicsr==1.4.2
 facexlib==0.2.5
+gradio
