--- a/requirements3d.txt
+++ b/requirements3d.txt
@@ -2,8 +2,8 @@ numpy==1.23.4
 face_alignment==1.3.5
 imageio==2.19.3
 imageio-ffmpeg==0.4.7
-librosa==0.6.0
-numba==0.48.0
+librosa==0.9.2 # 
+numba
 resampy==0.3.1
 pydub==0.25.1 
 scipy==1.5.3
