--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ face_alignment==1.3.5
 imageio==2.19.3
 imageio-ffmpeg==0.4.7
 librosa==0.9.2 # 
-numba==0.54.1 # 
+numba
 resampy==0.3.1
 pydub==0.25.1 
 scipy==1.5.3
